--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -8,10 +8,13 @@
                     <!-- testimonial content -->
                     <div class="testimonial-content t-one">
                         <!-- User's image , name and designation -->
-                        <h4><img src="img/user-xs.jpg" alt="" class="img-responsive img-circle"/>H. Rackham<span>, Atr Director</span></h4>
+                        <h4><img src="/images/testimonials/dorry-mahlin.jpg" alt="" class="img-responsive img-circle"/>Dorry och Mahin</h4>
                         <!-- User's comment -->
                         <blockquote class="br-orange">
-                            <p>Sed ut perspiciatis unde omnis iste natust error sit vol accusantium doloremque and laudantium, totam rem aperiam, eaque an ipsa quae abe illo explicabo. An oiuk nesciunt.</p>
+                            <p>
+                                Hej!<br>
+                                Här kommer en hälsning från Mahin och mig! Vi hade en mycket trevlig fikastund idag och har bestämt att vi ska ses snart igen! Bra matchning vad gäller våra intressen!
+                            </p>
                         </blockquote>
                     </div>
                 </div>
@@ -19,10 +22,13 @@
                     <!-- testimonial content -->
                     <div class="testimonial-content t-two">
                         <!-- User's image , name and designation -->
-                        <h4><img src="img/user-xs.jpg" alt="" class="img-responsive img-circle"/>Bum Malorum<span>, M. D.</span></h4>
+                        <h4><img src="/images/testimonials/amanda-gurbet.jpg" alt="" class="img-responsive img-circle"/>Amanda och Gurbet</h4>
                         <!-- User's comment -->
                         <blockquote class="br-lblue">
-                            <p>Sed ut perspiciatis unde omnis iste natust error sit vol accusantium doloremque and laudantium, totam rem aperiam, eaque an ipsa quae abe illo explicabo. An oiuk nesciunt.</p>
+                            <p>
+                                Idag fikade jag med Gurbet genom . Hon har varit här i 5 månader och är redan en fena på svenska. Vi pratade om allt möjligt, situationen för kurder i Turkiet, familj, tårtor och att vi ska träffas snart igen!<br>
+                                Tack för bra initiativ! 
+                            </p>
                         </blockquote>
                     </div>
                 </div>
@@ -30,10 +36,12 @@
                     <!-- testimonial content -->
                     <div class="testimonial-content t-three">
                         <!-- User's image , name and designation -->
-                        <h4><img src="img/user-xs.jpg" alt="" class="img-responsive img-circle"/>Jhonm Eloruk<span>, Manager</span></h4>
+                        <h4><img src="/images/testimonials/johannes-massod.jpg" alt="" class="img-responsive img-circle"/>Johannes och Massod</h4>
                         <!-- User's comment -->
                         <blockquote class="br-green">
-                            <p>Sed ut perspiciatis unde omnis iste natust error sit vol accusantium doloremque and laudantium, totam rem aperiam, eaque an ipsa quae abe illo explicabo. An oiuk nesciunt.</p>
+                            <p>
+                                Nu har jag och Massod fikat, vi sågs på Kulturhuset och drack kaffe. Vi pratade om matlagning, religion och våra båda hemländer. Mycket trevligt!
+                            </p>
                         </blockquote>
                     </div>
                 </div>
