--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -60,8 +60,8 @@
                     <img src="/images/logo.png" class="img-responsive" alt="Kompisbyrån" />
                 </div>
                 <div class="col-md-8 col-sm-6">
-                    <h3><strong>Naml Bero</strong> temporcum solasenda est omnis dolor</h3>
-                    <p>Temporibus autem quibu drsdam eactual teachings of the great explore masty auti melectus.</p>
+                    <h3>I Kompisbyrån övar vi svenska och fikar. <strong>Vill du vara med?</strong></h3>
+                    <p>Kompisbyrån är en ideell förening som länkar samman nya och etablerade svenskar genom kompisfikor. Fika och öva svenska med en person som du kanske annars inte skulle ha mött. Tillsammans kan vi öka gemenskapen i samhället.</p>
                 </div>
                 <div class="col-md-3 col-sm-4">
                     <!-- CTA Buttons -->
