--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% block body %}
 
@@ -8,7 +9,11 @@
             {{ form_start(form) }}
             {{ form_widget(form) }}
 
-            <input type="submit" value="Spara">
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Spara</button>
+                </div>
+            </div>
             {{ form_end(form) }}
         </div>
     </div>
