--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -61,13 +61,20 @@
                 </div>
                 <div class="col-md-8 col-sm-6">
                     <h3>I Kompisbyrån övar vi svenska och fikar. <strong>Vill du vara med?</strong></h3>
-                    <p>Kompisbyrån är en ideell förening som länkar samman nya och etablerade svenskar genom kompisfikor. Fika och öva svenska med en person som du kanske annars inte skulle ha mött. Tillsammans kan vi öka gemenskapen i samhället.</p>
+                    <p>
+                        Kompisbyrån är en ideell förening som digitalt länkar samman nya och etablerade svenskar för att
+                        öva svenska och utbyta kulturella erfarenheter över “kompisfikor”. Fika och öva svenska med en
+                        person som du kanske annars inte skulle ha mött. Tillsammans kan vi öka gemenskapen i samhället.
+                    </p>
                 </div>
-                <div class="col-md-3 col-sm-4">
+                <div class="col-md-3 col-sm-4 text-center">
                     <!-- CTA Buttons -->
                     <div class="caption">
-                        <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-green"><i class="fa fa-users"></i> Bli medlem nu!</a>
+                        <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-green">
+                            <i class="fa fa-users"></i> Jag vill kompisfika
+                        </a>
                     </div>
+                    <a href="{{ path('fos_user_security_login') }}">Är du redan registrerad?</a>
                 </div>
             </div>
         </div>
