--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -16,7 +16,35 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-4">
-                        <p>Text</p>
+                        <h2>Så här går det till</h2>
+                        <ol>
+                            <li>
+                                Vi matchar ihop dig med en ny kompis ur vårt nätverk. Vi kan också komma att lägga upp
+                                kort information om dig på vår Facebooksida för att hitta en ny kompis. (Vi lägger
+                                aldrig ut kontaktuppgifter offentligt, de skickas endast till den personen som matchas
+                                ihop med dig.)
+                            </li>
+                            <li>
+                                Du hör av dig till din nya fikakompis och bokar in en fika inom en vecka från det att
+                                matchningen gjorts. Ni bestämmer gemensamt datum, tid och plats men det ska vara på ett
+                                offentligt ställe i cirka 1 timme. Det går jättebra att ta med en extra kompis till
+                                fikan, både som vill öva eller lära ut svenska, så berätta för varandra hur ni vill
+                                göra.
+                            </li>
+                        </ol>
+
+                        <p>
+                            Utgångspunkten är att en kompisfika sker en gång. Vill du fika igen loggar du in på ditt
+                            konto och anmäler dig igen, så matchar vi ihop dig på nytt!
+                        </p>
+                        <p>
+                            Observera att fikan äger rum i Stockholm (om ni inte kommer överens om annat sker fikan i
+                            centrala Stockholm).
+                        </p>
+                        <p>
+                            Här till höger ser du dina tidigare kompisfikor och om du har anmält att du vill kompisfika
+                            igen.
+                        </p>
                     </div>
                     <div class="col-md-4 col-sm-4">
 
