--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -5,7 +5,7 @@
 
     <div class="inner-page">
         <div class="container">
-            <h2><strong>Inställningar</strong></h2>
+            <h2><strong>Min profil</strong></h2>
 
             <div class="row">
                 <div class="col-md-8 col-sm-8">
