--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -11,7 +11,7 @@
                     <tr>
                         <th>Skapad</th>
                         <th>Lärare</th>
-                        <th>Elev</th>
+                        <th>Övare</th>
                         <th>Ort</th>
                     </tr>
                 </thead>
