--- a/app/Resources/views/admin/default/index.html.twig
+++ b/app/Resources/views/admin/default/index.html.twig
@@ -3,7 +3,7 @@
 {% import _self as macro %}
 
 {% macro connectionRequestRow(connectionRequest, inputName, isChecked) %}
-    <div class="col-md-3 col-sm-3">
+    <div class="col-md-6 col-sm-6">
         <div class="testimonial-content t-one">
             <h4>
                 <img
@@ -53,21 +53,25 @@
                 </ul>
             </div>
 
-        <div class="inner-testimonial">
+        <div class="inner-testimonial row">
 
 
             <form method="POST" action="">
-                <h2>Vill förbättra svenskan</h2>
-                <div class="row">
-                    {% for connectionRequest in learners %}
-                        {{ macro.connectionRequestRow(connectionRequest, 'learner', loop.first) }}
-                    {% endfor %}
+                <div class="col-md-6 col-sm-6">
+                    <h2>Övare</h2>
+                    <div class="row">
+                        {% for connectionRequest in learners %}
+                            {{ macro.connectionRequestRow(connectionRequest, 'learner', loop.first) }}
+                        {% endfor %}
+                    </div>
                 </div>
-                <h2 style="clear:both">Vill hjälpa någon att förbättra svenskan</h2>
-                <div class="row">
-                    {% for connectionRequest in fluentSpeakers %}
-                        {{ macro.connectionRequestRow(connectionRequest, 'fluentSpeaker', loop.first) }}
-                    {% endfor %}
+                <div class="col-md-6 col-sm-6">
+                    <h2 style="clear:both">Lärare</h2>
+                    <div class="row">
+                        {% for connectionRequest in fluentSpeakers %}
+                            {{ macro.connectionRequestRow(connectionRequest, 'fluentSpeaker', loop.first) }}
+                        {% endfor %}
+                    </div>
                 </div>
 
                 <p style="clear:both">
