--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -64,12 +64,28 @@
                     <li><a href="">Samarbeta med oss</a></li>
                     <li><a href="{{ path('about') }}">Om oss</a></li>
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                        <li><a href="{{ path('settings') }}">Min profil</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                Min profil<span class="fa fa-angle-down"></span>
+                            </a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="{{ path('settings') }}">Inställningar</a></li>
+                                <li><a href="{{ path('fos_user_security_logout') }}">Logga ut</a></li>
+                            </ul>
+                        <li>
+
+
                         {% if is_granted('ROLE_ADMIN') %}
-                            <li><a href="{{ path('admin_start') }}">Personer att koppla ihop</a></li>
-                            <li><a href="{{ path('admin_connections') }}">Tidigare kopplingar</a></li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                    Admin<span class="fa fa-angle-down"></span>
+                                </a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="{{ path('admin_start') }}">Personer att koppla ihop</a></li>
+                                    <li><a href="{{ path('admin_connections') }}">Matchade fikakompisar</a></li>
+                                </ul>
+                            <li>
                         {% endif %}
-                        <li><a href="{{ path('fos_user_security_logout') }}">Logga ut</a></li>
                     {% else %}
                         {# <li><a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook'}) }}">Logga in med facebook</a></li> #}
                         <li><a href="{{ path('fos_user_security_login') }}">Logga in</a></li>
