--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -55,8 +55,11 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6">
-                    <h3>Ueum fugiat quo voluptas nulla pariatur?</h3>
-                    <p>Dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.</p>
+                    <p>
+                        Om du redan har skapat ett användarkonto, loggar du in här genom att fylla i din e-mailadress
+                        och lösenord. Är det första gången du vill fika, trycker du
+                        <a href="{{ path('fos_user_registration_register') }}">här</a>.
+                    </p>
                 </div>
             </div>
         </div>
