--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,7 +58,7 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ path('homepage') }}">Start</a></li>
+                    <li><a href="{{ path('homepage') }}">Hem</a></li>
                     <li><a href="{{ path('how_it_works') }}">Så här går det till</a></li>
                     <li><a href="{{ path('terms') }}">Villkor</a></li>
                     <li><a href="">Samarbeta med oss</a></li>
