Login form on registration page

--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -71,7 +71,7 @@
                     <!-- CTA Buttons -->
                     <div class="caption">
                         <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-green">
-                            <i class="fa fa-users"></i> Jag vill kompisfika
+                            <i class="fa fa-users"></i> Bli en fikakompis
                         </a>
                     </div>
                     <a href="{{ path('fos_user_security_login') }}">Är du redan registrerad?</a>
