--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -15,11 +15,50 @@
                                 För att kompisfika måste du först registrera dig genom att fylla i din e-mailadress och
                                 valfritt lösenord.
                             </p>
-                            <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
-                                {{ form_widget(form) }}
-                                <input type="submit" value="Skapa konto" class="btn btn-info" />
+                            <br>
+                            <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register form-horizontal">
+
+                                <div class="form-group">
+                                    <label for="email" class="col-lg-3 control-label">{{ 'form.username'|trans({}, 'FOSUserBundle') }}</label>
+
+                                    <div class="col-lg-9">
+                                        {{ form_widget(form.email) }}
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="password" class="col-lg-3 control-label">{{ 'form.password'|trans({}, 'FOSUserBundle') }}</label>
+
+                                    <div class="col-lg-9">
+                                        {{ form_widget(form.plainPassword.first) }}
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="password" class="col-lg-3 control-label">{{ 'form.password_confirmation'|trans({}, 'FOSUserBundle') }}</label>
+
+                                    <div class="col-lg-9">
+                                        {{ form_widget(form.plainPassword.second) }}
+                                    </div>
+                                </div>
+
+
+                                <div class="form-group">
+                                    <div class="col-lg-offset-3 col-lg-9">
+                                        <button type="submit" class="btn btn-info">Skapa konto</button>
+                                    </div>
+                                </div>
+
                             </form>
                         </div>
+
+                        <div class="sign-in">
+                            <h3><i class="fa fa-user red"></i> &nbsp;Logga in</h3>
+                            <p>Har du redan ett konto loggar du in här.</p>
+                            <br>
+                            {{ render(controller('FOSUserBundle:Security:login')) }}
+                        </div>
+
                     </div>
                     <div class="col-md-6 col-sm-6">
 
