Work with us page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,7 +62,7 @@
                     <li><a href="{{ path('homepage') }}">Hem</a></li>
                     <li><a href="{{ path('how_it_works') }}">Så här går det till</a></li>
                     <li><a href="{{ path('terms') }}">Villkor</a></li>
-                    <li><a href="">Samarbeta med oss</a></li>
+                    <li><a href="{{ path('work_with_us') }}">Samarbeta med oss</a></li>
                     <li><a href="{{ path('about') }}">Om oss</a></li>
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <li class="dropdown">
