--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -87,24 +87,25 @@
                         </h4>
                         <ol>
                             <li>
-                                Registrera dig genom att skapa ett användarkonto och tryck “Skapa konto”. Läs igenom
+                                Är det första gången du ska kompisfika? Skapa ett konto genom att fylla i din
+                                e-mailadress, ett lösenord du bestämmer själv och tryck “Skapa konto”. Läs igenom
                                 Kompisbyråns <a href="{{ path('terms') }}">villkor</a> innan du anmäler dig.
                             </li>
                             <li>
-                                <em>Text saknas</em>
+                                Du slussas nu vidare till ett formulär där du berättar lite om dig själv.
                             </li>
                             <li>
-                                Du slussas nu vidare till ett formulär. Fyll i formuläret där du berättar lite om dig
-                                själv.
+                                Nu har du anmält dig till att kompisfika! Vi kommer att höra av oss till dig via mail så
+                                fort vi har hittat en ny matchning. Du får då e-mailadressen till din nya fikakompis och
+                                kontaktar personen inom en vecka från att matchning har gjorts. Ni bestämmer var och när
+                                ni ska ses, men vi vill att ni träffas på ett offentligt kafé i ca 1 timme. Det är
+                                gratis att vara med och länkas ihop av Kompisbyrån.
+                            </li>
+                            <li>
+                                Om du redan har ett konto loggar du in och anmäler dig till en ny kompisfika på din
+                                profilsida.
                             </li>
                         </ol>
-                        <p>
-                            Nu har du anmält dig till att kompisfika! Vi kommer att hör av oss så fort vi har hittat en
-                            ny matchning. Du får då mailadressen till din nya fikakompis och ni hör av er till varandra
-                            inom en vecka från att matchning har gjorts. Ni bestämmer var och när ni ska ses, men vi
-                            vill att ni träffas på ett offentligt café i ca 1 timme. Det är gratis att vara med och
-                            länkas ihop av Kompisbyrån.
-                        </p>
                     </div>
                 </div>
             </div>
