Email. Not username

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -7,7 +7,7 @@
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
         <div class="form-group">
-            <label for="username" class="col-lg-3 control-label">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
+            <label for="username" class="col-lg-3 control-label">E-postadress</label>
             <div class="col-lg-9">
                 <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" />
             </div>
