--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -54,8 +54,7 @@
                             centrala Stockholm).
                         </p>
                         <p>
-                            Här till höger ser du dina tidigare kompisfikor och om du har anmält att du vill kompisfika
-                            igen.
+                            Här ser du även dina tidigare kompisfikor och om du har anmält att du vill kompisfika igen.
                         </p>
                     </div>
                     <div class="col-md-4 col-sm-4">
